Fix columns' text alignment

--- a/saleor/static/dashboard/scss/components/_data-table.scss
+++ b/saleor/static/dashboard/scss/components/_data-table.scss
@@ -75,6 +75,14 @@
     padding: 0 24px;
   }
 
+  &.no-align {
+    td, th {
+      &:last-child {
+        text-align: inherit;
+      }
+    }
+  }
+
   input[type=checkbox].filled-in + label {
     margin-top: 5px;
     padding: 0;
